# ML

./: .gitignore  CMakeLists.txt  README.md
Include/ML/: Activation.h  Enums.h  Layer.h  Loss.h  LossRegression.h  Matrix.h  Network.h  Utils.h  Vector.h
Source/: Activation.cpp  Debug.natvis  Layer.cpp  Loss.cpp  LossRegression.cpp  Matrix.cpp  Network.cpp  Utils.cpp  Vector.cpp
Tests/: CMakeLists.txt
Tests/Tests/: Activation.cpp  Layer.cpp  Learning.cpp  Loss.cpp  LossRegression.cpp  Math.cpp  Matrix.cpp  Vector.cpp
